# genai-from-scratch-to-prod

./: .env.example  .gitignore  README.md  image_classifier.py  main.py  pyproject.toml  resume_analyze.py
01_raw_llm_apis/: 01_basic_chat.py  02_streaming_chat.py  03_structured_outputs.py
